Feb  3 2006 -	3.2.7 is being tagged

Jan 16 2006 -	3.2.6 final is being tagged (no changes from 3.2.6b)

Jan 14 2006 -	3.2.6b is being tagged

Nov 15 2005 -	3.2.5b is being tagged

Oct 28 2005 -	3.2.4b is being tagged

Oct 22 2005 -	3.2.3b is being tagged

Sep 13 2005 -	3.2.2b is being tagged

Sep  6 2005 -	3.2.1b is being tagged

Aug 16 2005 -   3.2.0b is being tagged

Feb 17 2004 - 	3.1.3 is being tagged

Oct 14 2003 -	3.1.1b is tagged

Aug 29 2003 - 	3.1.0a (Alpha) is out

Mar 17 2003 -	3.0.3 is released 

		This file will no longer have details, since those
		are in CVS anyway.

Feb 12 2003 -   Added a test for req.headers_out

                Fixed a bug where None was added to sys.path

                Tests for connection and server added

Jan 18 2003 -   Between now and the last entry the following things took
                place:

                Problem with loading DSO on Solaris relating to _muldi3
                fixed.

                A problem fixed related to | .ext syntax.

                An environ issue addressed.

                Filtering by type should now work correctly.

                Publisher's code for dealing with file uploads simplified.

                A windows installer added.

                Install adopted to use distutils.

                A cgihandler problem resulting in double output fixed.

                PyOS_AfterFork() added where needed.

                The binary produced by MSVC no longer needs any MS dll's.

                Filter flush() now cleans memory so large files can be
                processed.

Nov 26 2002 -   3.0.1 is about to be released. This was file has not been
                updated during the 3.0 development because of too many
                things changing.

Nov 28 2001 -	Now compiles against Apache 2.0.28

Nov  6 2001 -	More internal changes. Bugs from previous change, cleaner
		reference keeping.

Nov  1 2001 -	Many internal changes. We no longer use req->notes for things