@@ -1,5 +1,5 @@
 #define MPV_MAJOR 3
 #define MPV_MINOR 2
-#define MPV_PATCH 7
-#define MPV_BUILD 20060202
-#define MPV_STRING "3.2.7"
+#define MPV_PATCH 8
+#define MPV_BUILD 20060219
+#define MPV_STRING "3.2.8"
