@@ -1,3 +1,7 @@
+Feb 19 2006 -	3.2.8 is being tagged
+                3.2.8 is a security release to fix the possible
+		directory traversal attack in FileSession.
+
 Feb  3 2006 -	3.2.7 is being tagged
 
 Jan 16 2006 -	3.2.6 final is being tagged (no changes from 3.2.6b)
